[package]
name = "tk-listen"
description = """
    A set of helper futures allowing to listen TCP (or unix) socket with
    resource limits and proper error handling.
"""
license = "MIT/Apache-2.0"
readme = "README.md"
keywords = ["listen", "tcp", "tokio", "bind"]
categories = ["Asynchronous", "Network programming"]
homepage = "http://github.com/tailhook/tk-listen"
documentation = "http://docs.rs/tk-listen"
version = "0.2.1"
authors = ["paul@colomiets.name"]
edition = "2018"

[dependencies]
tokio = "0.1"
log = "0.4"

[dev-dependencies]
tk-http = "0.3"
tokio-core = "0.1"
env_logger = "0.5"
abstract-ns = "0.4"
ns-env-config = "0.1"

